Remove dumb blur.
Was fun experiment.

--- a/pixiv_dl/webserver/static/custom.css
+++ b/pixiv_dl/webserver/static/custom.css
@@ -38,7 +38,7 @@ img.grid-image {
 
 /* r18 hover */
 img.r18 {
-    filter: blur(10px);
+    /*filter: blur(10px);*/
     /* this causes it to blur in on load... */
     /*transition: filter 0.05s;*/
 }
