--- a/pixiv_dl/webserver/static/custom.css
+++ b/pixiv_dl/webserver/static/custom.css
@@ -47,6 +47,13 @@ img.r18:hover {
     filter: none;
 }
 
+span.r18-text {
+    font-size: 150%;
+    font-weight: 500;
+    color: #FF0000;
+    padding-left: 5px;
+}
+
 /* artwork grid progress bar label */
 .artwork-progress-label {
     position: relative;
