--- a/pixiv_dl/webserver/templates/meta/artwork_grid.html
+++ b/pixiv_dl/webserver/templates/meta/artwork_grid.html
@@ -93,6 +93,9 @@
                                  class="grid-image {% if artwork.r18 %}r18{% endif %}"
                             />
                         </a>
+                        {% if artwork.r18 %}
+                        <span class="is-overlay r18-text">R-18</span>
+                        {% endif %}
 
                     </figure>
                 </div>
