Allow overlay click through

--- a/pixiv_dl/webserver/templates/meta/artwork_grid.html
+++ b/pixiv_dl/webserver/templates/meta/artwork_grid.html
@@ -94,7 +94,7 @@
                             />
                         </a>
                         {% if artwork.r18 %}
-                        <span class="is-overlay r18-text">R-18</span>
+                        <span class="is-overlay r18-text" style="pointer-events: none;">R-18</span>
                         {% endif %}
 
                     </figure>
