Refactor significant amounts of code into using a SQL database.
This (mostly) removes the old flat folder structure.

--- a/pixiv_dl/webserver/templates/grids/tags_grid.html
+++ b/pixiv_dl/webserver/templates/grids/tags_grid.html
@@ -1,4 +1,4 @@
-{% extends "meta/artwork_grid.html" %}
+{% extends "grids/base_grid.html" %}
 
 {% block grid_header %}
 <p class="title has-text-centered">Artwork Tagged As {{ tag }}</p>
