--- a/pixiv_dl/webserver/templates/meta/base.html
+++ b/pixiv_dl/webserver/templates/meta/base.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }} ">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!-- let FA work in case of no JS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 
     <title>Pixiv-DL Web Frontend</title>
 </head>
