--- a/pixiv_dl/webserver/static/custom.css
+++ b/pixiv_dl/webserver/static/custom.css
@@ -47,11 +47,31 @@ img.r18:hover {
     filter: none;
 }
 
-span.r18-text {
+span.is-overlay {
+    pointer-events: none;
+}
+
+span.is-r18 {
     font-size: 150%;
     font-weight: 500;
     color: #FF0000;
-    padding-left: 5px;
+
+    padding: 5px;
+    border-radius: 3px;
+    background-color: rgba(110, 0, 0, 0.5);
+    pointer-events: none;
+}
+
+span.is-multiple-pages {
+    text-align: right;
+    float: right;
+    font-size: 120%;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 3px;
+    padding: 5px;
+
+    pointer-events: none;
 }
 
 /* artwork grid progress bar label */
