--- a/pixiv_dl/webserver/templates/grids/raw_grid.html
+++ b/pixiv_dl/webserver/templates/grids/raw_grid.html
@@ -1,4 +1,4 @@
-{% extends "meta/artwork_grid.html" %}
+{% extends "grid/base_grid.html" %}
 
 {% block grid_header %}
 <p class="title has-text-centered">Raw Downloads Viewer</p>
