--- a/pixiv_dl/webserver/templates/meta/base.html
+++ b/pixiv_dl/webserver/templates/meta/base.html
@@ -35,10 +35,10 @@
 
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="{{ url_for('.raw') }}">Raws</a>
-                <a class="navbar-item" href="{{ url_for('.bookmarks') }}">Bookmarks</a>
-                <a class="navbar-item" href="{{ url_for('.users') }}">Users</a>
-                <a class="navbar-item" href="{{ url_for('.tags') }}">Tags</a>
+                <a class="navbar-item" href="/pages/raw">Raws</a>
+                <a class="navbar-item" href="/pages/bookmarks">Bookmarks</a>
+                <a class="navbar-item" href="/pages/users">Users</a>
+                <a class="navbar-item" href="/pages/tags">Tags</a>
             </div>
 
             <div class="navbar-end">
