Add random sample to web UI.

--- a/pixiv_dl/webserver/templates/grids/base_grid.html
+++ b/pixiv_dl/webserver/templates/grids/base_grid.html
@@ -10,10 +10,12 @@
 </section>
 
 {# pagination #}
+{% block pagination %}
 <section class="section">
 {% import "meta/pagination.html" as paginator %}
 {{ paginator.paginator(after, total_count, sortmode) }}
 </section>
+{% endblock %}
 
 {# the grid itself #}
 {% import "grids/helpers.html" as helpers %}
