--- a/pixiv_dl/webserver/templates/meta/base.html
+++ b/pixiv_dl/webserver/templates/meta/base.html
@@ -39,6 +39,7 @@
                 <a class="navbar-item" href="/pages/bookmarks">Bookmarks</a>
                 <a class="navbar-item" href="/pages/users">Users</a>
                 <a class="navbar-item" href="/pages/tags">Tags</a>
+                <a class="navbar-item" href="/pages/random">Random</a>
             </div>
 
             <div class="navbar-end">
